--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "homepage": "https://giraphi.github.io/habbl/",
   "dependencies": {
     "@apollo/client": "^3.5.7",
+    "@react-spring/three": "^9.4.2",
+    "@react-three/drei": "^8.6.3",
+    "@react-three/fiber": "^7.0.25",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -16,8 +19,10 @@
     "graphql": "^16.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
+    "react-three-gui": "^0.4.2",
     "styled-components": "^5.3.3",
+    "three": "^0.136.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -49,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/three": "^0.136.1",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "eslint": "^8.7.0",
